# Restaurant-manager-openenv

./: Dockerfile  MANIFEST.in  README.md  app.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  requirements.txt  runner.py  setup.py
env/: __init__.py  environment.py  graders.py  models.py  policies.py  simulation.py  tasks.py
server/: Dockerfile  __init__.py  app.py  requirements.txt
tests/: __init__.py  test_environment.py  test_models.py
ui/: app.js  index.html  styles.css
