[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "restaurant-manager-openenv"
version = "1.1.0"
description = "AI restaurant shift management environment - OpenEnv compatible"
requires-python = ">=3.10"
authors = [
    {name = "OpenEnv Contributors", email = "help.openenvhackathon@scaler.com"}
]
license = {text = "MIT"}
keywords = ["openenv", "restaurant", "management", "ai", "reinforcement-learning"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = [
    "fastapi==0.111.0",
    "uvicorn[standard]==0.29.0",
    "pydantic==2.7.1",
    "openai==1.30.1",
    "httpx==0.27.0",
    "python-multipart==0.0.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]

[project.urls]
Homepage = "https://huggingface.co/spaces"
Documentation = "https://huggingface.co/spaces"
Repository = "https://huggingface.co/spaces"

[tool.setuptools]
packages = ["env"]

[tool.setuptools.package-data]
env = ["*.py"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v"
filterwarnings = [
    "ignore::DeprecationWarning",
]

[tool.pylint]
max-line-length = 120
disable = [
    "C0111",
    "R0913",
    "R0914",
]
